language/move-lang/tests/move_check/typing/main_arguments_invalid.exp
error: 

   ┌── tests/move_check/typing/main_arguments_invalid.move:1:5 ───
   │
 1 │ fun main<T>(x: T) {
   │     ^^^^ Invalid parameter for 'main'
   ·
 1 │ fun main<T>(x: T) {
   │                - Found: 'T'. But expected: 'address', 'bool', 'u128', 'u64', 'u8', 'vector'
   │

error: 

   ┌── tests/move_check/typing/main_arguments_invalid.move:1:10 ───
   │
 1 │ fun main<T>(x: T) {
   │          ^ Invalid 'main' declaration. Found type parameter 'T'. The main function cannot have type parameters
   │

