language/move-lang/tests/move_check/typing/main_arguments_invalid.move
fun main<T>(x: T) {

}
